feat: task manager (미완)

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,12 @@
 body {
   margin: 0px;
+  color: '#333333'
+}
+
+span.text-gray, p.text-gray {
+  color:#757575;
+}
+
+span.text-lightgray, p.text-lightgray {
+  color:#9999;
 }
