style: edit myteams page

--- a/src/app/myteams/teams.module.css
+++ b/src/app/myteams/teams.module.css
@@ -1,6 +1,10 @@
+.container{
+  width:100%;
+}
+
 .teamsHeader {
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-end;
     align-items: center;
     padding: 10px;
   }
@@ -8,8 +12,9 @@
   .button {
     background: none;
     border: none;
-    font-size: 24px;
+    font-size: 40px;
     cursor: pointer;
+    color:#939393;
   }
   
   .title {
@@ -19,6 +24,7 @@
   }
   
   .subtitle {
+    color:#787878;
     padding: 10px;
   }
   
@@ -30,7 +36,7 @@
   
   .teamCard {
     background-color: #e0e0e0;
-    height: 100px;
+    height: 60px;
     margin-bottom: 10px;
     border-radius: 5px;
     display: flex;
@@ -42,6 +48,6 @@
   .teamButton {
     background: none;
     border: none;
-    font-size: 20px;
+    font-size: 17px;
     cursor: pointer;
   }
